feat(java): this changes Velocity, H22Cache and the JobScheduler to use Virtual Threads.
Also replaces the use of FastDateTimeFormatter with the threadsafe DateTimeFormatter

ref: #33865